--- a/connect4.css
+++ b/connect4.css
@@ -1,9 +1,36 @@
 /* game board table */
+body {
+  position: relative;
+  background: lightblue;
+}
+h1 {
+  margin: auto;
+  text-align: center;
+}
+h2 {
+  margin: auto;
+  text-align: center;
+}
+h3{
+  margin: auto;
+  text-align: center;
+}
 
+#board {
+  margin: auto;
+  border-width: 2px 10px 2px 10px;
+	border-spacing: 2px;
+	border-style: solid;
+	border-color: blue yellow blue yellow;
+	border-collapse: collapse;
+}
 #board td {
-  width: 50px;
-  height: 50px;
-  border: solid 1px #666;
+  width: 60px;
+  height: 60px;
+  border-width: 2px;
+	padding: 1px;
+	border-style: solid;
+	border-color: blue;	
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -24,7 +51,7 @@
 }
 
 .p2{
-  background-color: blue;
+  background-color: black;
 }
 /* column-top is table row of clickable areas for each column */
 
@@ -33,5 +60,26 @@
 }
 
 #column-top td:hover {
-  background-color: gold;
+  background-color: blue;
+}
+
+#container {
+  position: relative;
+  height: 100px;
+}
+#reset{
+  height: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% -50%);
+}
+.resetbutton {
+  width: 50px;
+  height: 25px;
+  background-color: white;
+}
+
+.resetbutton:hover{
+  background-color: red;
 }
